<resources>

    <string-array name="packs">
        <item>Pro</item>
        <item>Elite</item>
    </string-array>
    <string name="app_name">Chantier.tn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_qual">Qualification</string>
    <string name="des_qual">Un de nos conseillers l\'appelle pour détailler et formuler une demande d\'achat claire .</string>
    <string name="text_signal">signal</string>
    <string name="des_signal">L\'acheteur dépose sa demande d\'achat en quelques minutes sur Chantier.tn .\</string>
    <string name="text_consultation">consultation</string>
    <string name="des_consultation">Vous consultez les nouvelles demandes. Si un marché vous intéresse et répond à vos besoins . Vous pouvez afficher le contact de l’acheteur et proposer vos services / devis .</string>
    <string name="text_relation">Mise en relation</string>
    <string name="des_relation">Et voilà ! Vous êtes en relation avec un client potentiel .</string>
    <string name="connexion">Se connecter</string>
    <string name="inscription">Créer un compte</string>
    <string name="reinscription">Mot de passe oublié ?</string>
    <string name="hintLastName">Nom</string>
    <string name="hintFirstName">Prénom</string>
    <string name="hintMail">E-mail</string>
    <string name="hintPhoneNumber">Téléphone</string>
    <string name="hintSocietyName">Nom de la société</string>
    <string name="hintPostalCode">Code postal</string>
    <string name="hintPassword">Mot de passe</string>
    <string name="hintPostalCode2">Confirmer le mot de passe</string>
    <string name="category_list">Toutes les catégories</string>
    <string name="verify_info_login">Tous les champs sont obligatoires !</string>
    <string name="error">Erreur</string>
    <string name="verify_email_validity">Le format de l\'adresse email n\'est pas valide !</string>
    <string name="existing_user_alert">Le champ email existe déja. Veuillez réessayer.</string>
    <string name="technical_error_alert">Une erreur technique est survenue lors de votre démarche. Veuillez réessayer ultérieurement.</string>
    <string name="verify_phone_number">Le numéro de téléphone est invalide !</string>
    <string name="verify_postal_code">Le code postal est invalide !</string>
    <string name="verify_confirmed_password">Le mot de passe est incorrect !</string>
    <string name="verify_form_email">L\'adresse mail saisie est incorrecte !</string>
    <string name="verify_length_password">Le mot de passe doit avoir plus de six caractères !</string>
    <string name="existing_user_email"> L\'adresse e-mail existe déjà !</string>
    <string name="existing_user_phone_number">Le numéro de téléphone existe déja !</string>
    <string name="verify_internet">Vérifier votre connexion internet et réesayer !</string>
    <string name="warning">Avertissement</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Mon compte</string>
    <string name="item_home">Accueil</string>
    <string name="item_favoris">Favoris</string>
    <string name="item_suivi">Suivi</string>
    <string name="item_notifications">Notifications</string>
    <string name="verify_connexion_infos">Vérifier votre adresse email ou votre mot de passe.</string>
    <string name="text_forgotten_password">Veuillez saisir l\'adresse qui correspond à votre compte sur Chantier.tn</string>
    <string name="validate_button">Valider</string>
    <string name="no_email">Le champ e-mail est vide.</string>
    <string name="no_password">Le champ mot de passe est vide.</string>
    <string name="text_inscription">S\'inscrire</string>
    <string name="layout_demandes">Demandes</string>
    <string name="offers">Demandes</string>
    <string name="verify_form_email_reset">L\'adresse mail que vous avez saisie n\'existe pas !</string>
    <string name="send_reset_password">Changer</string>
    <string name="cancel_reset_password">Annuler</string>
    <string name="reset_password">Réinitialisez votre mot de passe</string>
    <string name="details_description">Détails de la demande : </string>
    <string name="browse_contact_layout">Afficher contact</string>
    <string name="mail">E-mail</string>
    <string name="phone">Appeler</string>
    <string name="filter">Filtre</string>
    <string name="applicant_type">Type de demandeur</string>
    <string name="reset_button">Réinitialiser</string>
    <string name="sub_categories">Spécialité</string>
    <string name="region">Ville</string>
    <string name="return_text">Retour</string>
    <string name="button_confirm">Confirmer</string>
    <string name="label_cities">Ville</string>
    <string name="label_grand_tunis">Tunis republique</string>
    <string name="city">grand tunis</string>
    <string name="send_message">Ecrire à l\'équipe Chantier</string>
    <string name="no_chat_text">Vous ne pouvez pas envoyer un texte vide !</string>
    <string name="error_loading_chats">Vous ne pouvez pas récupérer ni envoyer des message , n\'oubliez pas de nous contacter SVP !</string>
    <string name="label_chat">Contactez-nous !</string>
    <string name="button_envoyer">Envoyer</string>
    <string name="sponsor_pack">Sponsor</string>
    <string name="leads">Leads illimité</string>
    <string name="administration">Espace d\'administration</string>
    <string name="assistance">Assistance client</string>
    <string name="bilan">Bilan d\'activités</string>
    <string name="bannier">Insertion de bannières</string>
    <string name="sponsor">Sponsor du secteur</string>
    <string name="habillage">Habillage du site</string>
    <string name="Sponsor_pack_price">2 000 DHT</string>
    <string name="subscribe_button">S\'abbonner</string>
    <string name="elite_pack">Elite</string>
    <string name="blank_pack_case">----</string>
    <string name="elite_pack_price">1 000 dt HT / An</string>
    <string name="pro_pack">Pro</string>
    <string name="pro_pack_price">400 dt HT / An</string>
    <string name="free_pack">Free</string>
    <string name="free_pack_price">gratuit</string>
    <string name="followed_offers">Demandes consultées</string>
    <string name="no_email_address">Le demandeur n\'a pas mentionné son adresse mail !</string>
    <string name="no_phone_number">Le demandeur n\'a pas mentionné son numéro de téléphone !</string>
    <string name="text_splash_screen_under_logo_1">VOUS MET EN RELATION AVEC</string>
    <string name="text_splash_screen_under_logo_2">Vos futurs clients</string>
    <string name="pack_duration">soit 100 DT HT / Mois</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://mail.google.com/.well-known/assetlinks.json\" }]</string>
    <string name="Warning">Le nombre des sous-secteurs choisis ne doit pas dépasser le 20 !</string>
    <string name="default_notification_channel_id">my_channel_01</string>
    <string name="empty_webService_values">Vous n\'avez pas choisi aucune catégorie !</string>
    <string name="verify_mail_phone_number">L\'email et/ou le numéro de téléphone sont obligatoires !</string>
    <string name="msg_subscribe_failed">subscribe failed</string>
    <string name="ads">Publicité</string>
    <string name="incorrect_email_or_password">L\' email ou/ et le mot de passe sont incorrects</string>
    <string name="label_spacialities">Spécialités</string>
    <string name="no_type_filter">SVP Choisissez Type(s) demandeur !</string>
    <string name="confidentiality_politics_text">Politique de confidentialité</string>
    <string name="address_label">Adresse complète</string>
    <string name="address_chantiertn">4ème étage, Bloc F, Espace Tunis, Montplaisir, Tunis, Tunisie.</string>
    <string name="tel_chantiertn_label">Numéros de téléphone:</string>
    <string name="tel_chantiertn">71 900 500 / 27 180 255</string>
    <string name="call_chantiertn">Appelez-nous</string>
</resources>
