<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/lightGray"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/icon_nav_bar"
        android:layout_width="70dp"
        android:layout_marginLeft="10dp"
        android:layout_height="80dp"
        android:contentDescription="@string/nav_header_desc"
        android:padding="5dp"
        app:srcCompat="@drawable/icone_pro" />

    <tn.chantier.chantiertn.utils.textstyle.RalewayTextView
        android:layout_marginLeft="15dp"
        android:id="@+id/tv_socity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:fonttype="bold"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <tn.chantier.chantiertn.utils.textstyle.RalewayTextView
        android:layout_marginLeft="15dp"
        android:id="@+id/tv_email_professional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@color/colorBrown"
        android:layout_alignParentBottom="true"
        android:layout_height="1dp"/>

</LinearLayout>
