<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:background="@color/colorWhite"
        android:paddingTop="15dp">

        <tn.chantier.chantiertn.utils.textstyle.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/label_chat"
            android:textColor="@color/colorDarkGrey"
            android:textSize="16sp"
            app:fonttype="bold" />


        <tn.chantier.chantiertn.utils.textstyle.RalewayTextView
            android:id="@+id/tv_retour_chat_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="@string/return_text"
            android:textColor="@color/colorYellow"
            android:textSize="13sp" />


        <View
            android:id="@+id/view_separate_chat_dialog"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_retour_chat_dialog"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />



        <tn.chantier.chantiertn.utils.textstyle.RalewayEditText
            android:textAllCaps="false"
            android:id="@+id/et_send_chat_dialog"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_below="@id/view_separate_chat_dialog"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorDarkGrey"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gray_stroke_button"
            android:hint="Chercher une région"
            android:paddingLeft="10dp"
            android:textSize="12sp" />

        <tn.chantier.chantiertn.utils.textstyle.RalewayTextView
            android:id="@+id/tv_confirm_chat_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_send_chat_dialog"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/button_envoyer"
            android:textAllCaps="true"
            android:textColor="@color/colorYellow"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>